--- a/Property FW and wreath products/Bouts/Expositiones Mathematicae/V3 (Final)/Property FW and wreath products of groups.tex
+++ b/Property FW and wreath products/Bouts/Expositiones Mathematicae/V3 (Final)/Property FW and wreath products of groups.tex
@@ -562,6 +562,7 @@ Heinz Hopf.
 Paul-Henry Leemann and Gr{\'e}goire Schneeberger.
 \newblock Wreath products of groups acting with bounded orbits.
 \newblock {\em arXiv e-prints}, page arXiv:2102.08001, February 2021.
+\newblock Accepted in L’Enseignement Math\'ematique.
 
 \bibitem{MR1358635}
 Alexander Lubotzky.
