--- a/Property FW and wreath products/Bouts/Expositiones Mathematicae/V3 (Final)/Property FW and wreath products of groups.tex
+++ b/Property FW and wreath products/Bouts/Expositiones Mathematicae/V3 (Final)/Property FW and wreath products of groups.tex
@@ -47,7 +47,7 @@
 %
 %
 \title{Property~FW and wreath products of groups: a~simple approach using Schreier graphs}
-\author{Paul-Henry Leemann\thanks{Supported by grant 200021\textunderscore188578 of the Swiss National Fund for Scientific Research.}, Grégoire Schneeberger}
+\author{Paul-Henry Leemann\thanks{Supported by grant 200021\textunderscore188578 of of the Swiss NSF.}, Grégoire Schneeberger\thanks{Supported by grants 200020-178828 and 200020-200400 of the Swiss NSF.}}
 \date{\today}
 %
 %
@@ -561,8 +561,8 @@ Heinz Hopf.
 \bibitem{LS2021}
 Paul-Henry Leemann and Gr{\'e}goire Schneeberger.
 \newblock Wreath products of groups acting with bounded orbits.
-\newblock {\em arXiv e-prints}, page arXiv:2102.08001, February 2021.
-\newblock Accepted in L’Enseignement Math\'ematique.
+%\newblock {\em arXiv e-prints}, page arXiv:2102.08001, February 2021.
+\newblock Accepted in {\em L’Enseignement Math\'ematique}, 2022.
 
 \bibitem{MR1358635}
 Alexander Lubotzky.
