Ajout details contact

--- a/Property FW and wreath products/Bouts/Expositiones Mathematicae/V3 (Final)/Property FW and wreath products of groups.tex
+++ b/Property FW and wreath products/Bouts/Expositiones Mathematicae/V3 (Final)/Property FW and wreath products of groups.tex
@@ -47,8 +47,11 @@
 %
 %
 \title{Property~FW and wreath products of groups: a~simple approach using Schreier graphs}
-\author{Paul-Henry Leemann\thanks{Supported by grant 200021\textunderscore188578 of of the Swiss NSF.}, Grégoire Schneeberger\thanks{Supported by grants 200020-178828 and 200020-200400 of the Swiss NSF.}}
-\date{\today}
+\author{Paul-Henry Leemann\thanks{Supported by grant 200021\textunderscore188578 of of the Swiss NSF.} $^{,1}$, Grégoire Schneeberger\thanks{Supported by grants 200020-178828 and 200020-200400 of the Swiss NSF.} $^{,2}$}
+\date{
+{\small $^1$Institut de Math\'ematiques, Universit\'e de Neuch\^atel, Rue Emile-Argand 11, 2000~Neuch\^atel, Switzerland, \texttt{paul-henry.leemann@unine.ch}}\\%
+{\small $^2$Section de math\'ematiques, Universit\'e de Gen\`eve, 7-9, rue du Conseil G\'en\'eral, 1205~Gen\`eve, Switzerland, \texttt{gregoire.schneeberger@unige.ch}}\\[2ex]%
+\today}
 %
 %
 %
